src/test/ui/type/type-recursive.stderr
error[E0072]: recursive type `T1` has infinite size
  --> $DIR/type-recursive.rs:1:1
   |
LL | struct T1 {
   | ^^^^^^^^^ recursive type has infinite size
LL |     foo: isize,
LL |     foolish: T1
   |              -- recursive without indirection
   |
help: insert some indirection (e.g., a `Box`, `Rc`, or `&`) to make `T1` representable
   |
LL |     foolish: Box<T1>
   |              ^^^^  ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0072`.
